--- a/app.json
+++ b/app.json
@@ -27,6 +27,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "androidNavigationBar":{
+      "backgroundColor":  "#8CA5FF"
     }
   }
 }
