--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-speech": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-modalize": "^2.0.8",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
